Report almost finished

--- a/lab/4-5/report/Makefile
+++ b/lab/4-5/report/Makefile
@@ -3,7 +3,7 @@ BIB=references.bib
 .PHONY: check-bibliography sort-bibliography all
 
 all:
-	latexmk -bibtex -pdf $(NAME) --jobname=$(NAME)-final -output-directory=build
+	latexmk -bibtex -pdf -shell-escape $(NAME) --jobname=$(NAME)-final -output-directory=build
 	cp -f "build/$(NAME)-final.pdf" "$(NAME).pdf"
 
 clean:
